# hero_team_api

./: 404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  requirements_full.txt  requirements_project.txt
ENV/: .env.template
PROJECT_ITEMS/logging/: index.html
TEAM_SECTION/dev/dev_setup/dev_first_steps/github_repo_cloning/: index.html
TEAM_SECTION/dev/dev_setup/dev_setup/: index.html
TEAM_SECTION/dev/dev_setup/pycharm_plugins/: index.html
TEAM_SECTION/dev/dev_setup/pycharm_plugins/ruff/: index.html
app/: main.py
app/crud/: hero.py  team.py
app/db/: database.py
app/routes/: hero.py  team.py
app/schemas/: hero.py  team.py
app/tests/: test_main.py
app/tests/routes/: conftest.py  test_hero.py
app/utils/: logger.py  run_uvicorn.py
docs/: .pages  index.md  mkdocs.md
docs/PROJECT_ITEMS/: .pages  logging.md
docs/TEAM_SECTION/: .pages
docs/TEAM_SECTION/dev/: .pages
docs/TEAM_SECTION/dev/dev_setup/: .pages  dev_setup.md  pycharm_plugins.md
docs/TEAM_SECTION/dev/dev_setup/dev_first_steps/: .pages  github_repo_cloning.md
docs/TEAM_SECTION/dev/dev_setup/pycharm_plugins/: ruff.md
mkdocs/: index.html
search/: search_index.json
